--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,10 @@
   --beige: #d5bb7e;
 }
 
+* {
+  transition: all 0.15s ease-in-out;
+}
+
 body {
   background-color: var(--beige);
   color: var(--red);
@@ -21,7 +25,13 @@ body {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   margin: 0;
   padding: 0;
+  margin-bottom: 20px;
+}
+
+a {
+  color: var(--red);
+  text-decoration: none;
 }
